Added spark dataframe functions

--- a/4-DataFrames.ipynb
+++ b/4-DataFrames.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,10 +64,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x1dcd3d2ba60>"
+       "<pyspark.sql.session.SparkSession at 0x205c3dd31f0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,6 +1107,285 @@
    "outputs": [],
    "source": [
     "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Row()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import Row\n",
+    "\n",
+    "data = [Row(\"Laptop\", 45000), Row(\"Monitor\", 12000), Row(\"Keyboard\", 2600), Row(\"Mouse\", 1200)]\n",
+    "\n",
+    "df = spark.createDataFrame(data=data, schema=[\"item\", \"price\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+\n",
+      "|    item|price|\n",
+      "+--------+-----+\n",
+      "|  Laptop|45000|\n",
+      "| Monitor|12000|\n",
+      "|Keyboard| 2600|\n",
+      "|   Mouse| 1200|\n",
+      "+--------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Order = Row(\"item\", \"price\")\n",
+    "\n",
+    "#order = Order(\"Laptop\", 45000)\n",
+    "\n",
+    "data = [Order(\"Laptop\", 45000), Order(\"Monitor\", 12000), Order(\"Keyboard\", 2600), Order(\"Mouse\", 1200)]\n",
+    "\n",
+    "df = spark.createDataFrame(data=data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+\n",
+      "|    item|price|\n",
+      "+--------+-----+\n",
+      "|  Laptop|45000|\n",
+      "| Monitor|12000|\n",
+      "|Keyboard| 2600|\n",
+      "|   Mouse| 1200|\n",
+      "+--------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Column()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.sql.column.Column"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import lit\n",
+    "\n",
+    "col = lit(\"Dummy\")\n",
+    "type(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [(\"Laptop\", 45000), (\"Monitor\", 12000), (\"Keyboard\", 2600), (\"Mouse\", 1200)]\n",
+    "schema = [\"item\", \"price\"]\n",
+    "\n",
+    "df = spark.createDataFrame(data=data, schema=schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+\n",
+      "|    item|price|\n",
+      "+--------+-----+\n",
+      "|  Laptop|45000|\n",
+      "| Monitor|12000|\n",
+      "|Keyboard| 2600|\n",
+      "|   Mouse| 1200|\n",
+      "+--------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+-------+\n",
+      "|    item|price|country|\n",
+      "+--------+-----+-------+\n",
+      "|  Laptop|45000|  India|\n",
+      "| Monitor|12000|  India|\n",
+      "|Keyboard| 2600|  India|\n",
+      "|   Mouse| 1200|  India|\n",
+      "+--------+-----+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.withColumn(\"country\", lit(\"India\"))\n",
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+\n",
+      "|    item|\n",
+      "+--------+\n",
+      "|  Laptop|\n",
+      "| Monitor|\n",
+      "|Keyboard|\n",
+      "|   Mouse|\n",
+      "+--------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select(df.item).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+\n",
+      "|    item|\n",
+      "+--------+\n",
+      "|  Laptop|\n",
+      "| Monitor|\n",
+      "|Keyboard|\n",
+      "|   Mouse|\n",
+      "+--------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select(df[\"item\"]).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+\n",
+      "|    item|\n",
+      "+--------+\n",
+      "|  Laptop|\n",
+      "| Monitor|\n",
+      "|Keyboard|\n",
+      "|   Mouse|\n",
+      "+--------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import col\n",
+    "df.select(col(\"item\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-------+\n",
+      "|    item|country|\n",
+      "+--------+-------+\n",
+      "|  Laptop|  India|\n",
+      "| Monitor|  India|\n",
+      "|Keyboard|  India|\n",
+      "|   Mouse|  India|\n",
+      "+--------+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select(df.item, df.country).show()"
    ]
   },
   {
