Added udf, map, flatMap functions

--- a/3-RDDs.ipynb
+++ b/3-RDDs.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sample RDD Transformations and Actions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Actions"
+    "### Actions"
    ]
   },
   {
@@ -214,52 +207,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Transformations"
+    "### Transformations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### map()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['MOBILE', 'PC', 'LAPTOP', 'MONITOR', 'MOUSE']"
+       "[(1, 'Paul', 32000, 'HR'),\n",
+       " (2, 'Tina', 45000, 'HR'),\n",
+       " (3, 'John', 28000, 'IT'),\n",
+       " (4, 'Mike', 36000, 'IT'),\n",
+       " (5, 'David', 34000, 'Sales')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd.map(lambda x: x.upper()).collect()"
+    "data = [(1, \"Paul\", 32000, \"HR\"), (2, \"Tina\", 45000, \"HR\"), (3, \"John\", 28000, \"IT\"), (4, \"Mike\", 36000, \"IT\"), (5, \"David\", 34000, \"Sales\")]\n",
+    "\n",
+    "rdd = sc.parallelize(data)\n",
+    "rdd.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['mobile', 'monitor', 'mouse']"
+       "[44800.0, 63000.0, 39200.0, 50400.0, 47600.0]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd.filter(lambda x: x[0] == \"m\").collect()"
+    "rdd.map(lambda emp: (emp[2] + emp[2] * 0.4)).collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1,\n",
+       "  'name': 'Paul',\n",
+       "  'salary': 32000,\n",
+       "  'dept': 'HR',\n",
+       "  'increment': 12800.0},\n",
+       " {'id': 2,\n",
+       "  'name': 'Tina',\n",
+       "  'salary': 45000,\n",
+       "  'dept': 'HR',\n",
+       "  'increment': 18000.0},\n",
+       " {'id': 3,\n",
+       "  'name': 'John',\n",
+       "  'salary': 28000,\n",
+       "  'dept': 'IT',\n",
+       "  'increment': 11200.0},\n",
+       " {'id': 4,\n",
+       "  'name': 'Mike',\n",
+       "  'salary': 36000,\n",
+       "  'dept': 'IT',\n",
+       "  'increment': 14400.0},\n",
+       " {'id': 5,\n",
+       "  'name': 'David',\n",
+       "  'salary': 34000,\n",
+       "  'dept': 'Sales',\n",
+       "  'increment': 13600.0}]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd.map(lambda emp: {\n",
+    "    \"id\": emp[0],\n",
+    "    \"name\": emp[1],\n",
+    "    \"salary\": emp[2],\n",
+    "    \"dept\": emp[3],\n",
+    "    \"increment\": emp[2] * 0.4\n",
+    "}).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### filter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 'Tina', 45000, 'HR'), (4, 'Mike', 36000, 'IT')]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd.filter(lambda emp: emp[2] > 35000).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -268,21 +352,21 @@
        "[2, 1, 3, 5, 6, 4]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "myList = [2, 1, 3, 5, 6, 4]\n",
-    "rdd = sc.parallelize(myList)\n",
+    "rdd_sample = sc.parallelize(myList)\n",
     "\n",
-    "rdd.collect()"
+    "rdd_sample.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -291,18 +375,25 @@
        "[2, 6, 4]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd.filter(lambda x: x%2 == 0).collect()"
+    "rdd_sample.filter(lambda x: x%2 == 0).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### reduce()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -311,38 +402,25 @@
        "21"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd.reduce(lambda x,y: x+y)"
+    "rdd_sample.reduce(lambda x,y: x+y)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 1, 3, 5, 6, 4]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "rdd.collect()"
+    "### sortBy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -351,33 +429,37 @@
        "[1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd.sortBy(lambda x:x).collect()"
+    "rdd_sample.sortBy(lambda x:x).collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 'Paul', 32), (2, 'Tina', 45), (3, 'John', 28)]"
+       "[(1, 'Paul', 32),\n",
+       " (2, 'Tina', 45),\n",
+       " (3, 'John', 28),\n",
+       " (4, 'Mike', 25),\n",
+       " (5, 'David', 36)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myList = [(1, \"Paul\", 32), (2, \"Tina\", 45), (3, \"John\", 28)]\n",
+    "myList = [(1, \"Paul\", 32), (2, \"Tina\", 45), (3, \"John\", 28), (4, \"Mike\", 25), (5, \"David\", 36)]\n",
     "rdd = sc.parallelize(myList)\n",
     "\n",
     "rdd.collect()"
@@ -385,16 +467,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(3, 'John', 28), (1, 'Paul', 32), (2, 'Tina', 45)]"
+       "[(4, 'Mike', 25),\n",
+       " (3, 'John', 28),\n",
+       " (1, 'Paul', 32),\n",
+       " (5, 'David', 36),\n",
+       " (2, 'Tina', 45)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,16 +491,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2, 'Tina', 45), (1, 'Paul', 32), (3, 'John', 28)]"
+       "[(2, 'Tina', 45),\n",
+       " (5, 'David', 36),\n",
+       " (1, 'Paul', 32),\n",
+       " (3, 'John', 28),\n",
+       " (4, 'Mike', 25)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,8 +514,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convert RDD to DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Paul', 32000, 'HR'),\n",
+       " (2, 'Tina', 45000, 'HR'),\n",
+       " (3, 'John', 28000, 'IT'),\n",
+       " (4, 'Mike', 36000, 'IT'),\n",
+       " (5, 'David', 34000, 'Sales')]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [(1, \"Paul\", 32000, \"HR\"), (2, \"Tina\", 45000, \"HR\"), (3, \"John\", 28000, \"IT\"), (4, \"Mike\", 36000, \"IT\"), (5, \"David\", 34000, \"Sales\")]\n",
+    "\n",
+    "rdd = sc.parallelize(data)\n",
+    "rdd.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+------+----------+\n",
+      "| id| name|salary|department|\n",
+      "+---+-----+------+----------+\n",
+      "|  1| Paul| 32000|        HR|\n",
+      "|  2| Tina| 45000|        HR|\n",
+      "|  3| John| 28000|        IT|\n",
+      "|  4| Mike| 36000|        IT|\n",
+      "|  5|David| 34000|     Sales|\n",
+      "+---+-----+------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = rdd.toDF(schema=[\"id\", \"name\", \"salary\", \"department\"])\n",
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DataFrame to RDD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Paul', 32000, 'HR'),\n",
+       " (2, 'Tina', 45000, 'HR'),\n",
+       " (3, 'John', 28000, 'IT'),\n",
+       " (4, 'Mike', 36000, 'IT'),\n",
+       " (5, 'David', 34000, 'Sales')]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd = df.rdd.map(lambda emp: tuple(emp))\n",
+    "rdd.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to use map on DataFrame?\n",
+    "1. Convert DataFrame to RDD.\n",
+    "2. Use map (even apply transformation if needed) and get the new mapped RDD.\n",
+    "3. Convert mapped RDD to new DataFrame using toDF() function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+------+----------+\n",
+      "| id| name|salary|department|\n",
+      "+---+-----+------+----------+\n",
+      "|  1| Paul| 32000|        HR|\n",
+      "|  2| Tina| 45000|        HR|\n",
+      "|  3| John| 28000|        IT|\n",
+      "|  4| Mike| 36000|        IT|\n",
+      "|  5|David| 34000|     Sales|\n",
+      "+---+-----+------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('EMP001', 'PAUL', 32000, 'HR', 12800.0),\n",
+       " ('EMP002', 'TINA', 45000, 'HR', 18000.0),\n",
+       " ('EMP003', 'JOHN', 28000, 'IT', 11200.0),\n",
+       " ('EMP004', 'MIKE', 36000, 'IT', 14400.0),\n",
+       " ('EMP005', 'DAVID', 34000, 'Sales', 13600.0)]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapped_rdd = df.rdd.map(lambda emp: (\n",
+    "        \"EMP00\" + str(emp[0]), \n",
+    "        emp[1].upper(),\n",
+    "        emp[2],\n",
+    "        emp[3],\n",
+    "        emp[2] * 0.4\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "mapped_rdd.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----+------+----------+---------+\n",
+      "|    id| name|salary|department|increment|\n",
+      "+------+-----+------+----------+---------+\n",
+      "|EMP001| PAUL| 32000|        HR|  12800.0|\n",
+      "|EMP002| TINA| 45000|        HR|  18000.0|\n",
+      "|EMP003| JOHN| 28000|        IT|  11200.0|\n",
+      "|EMP004| MIKE| 36000|        IT|  14400.0|\n",
+      "|EMP005|DAVID| 34000|     Sales|  13600.0|\n",
+      "+------+-----+------+----------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapped_df = mapped_rdd.toDF(schema=[\"id\", \"name\", \"salary\", \"department\", \"increment\"])\n",
+    "mapped_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
