--- a/4-DataFrames.ipynb
+++ b/4-DataFrames.ipynb
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
        "2000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1101,12 +1101,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### partitionBy()\n",
+    "- Split the data into multiple small files based on specified columns.\n",
+    "- Need to used carefully. It is recommeded to use on columns having discrete number of values. If used on continuous values like name/id, it create many folders."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.stop()"
+    "#df.write.parquet(path=\"resources/out/parquest_files/user\", mode=\"overwrite\", partitionBy=[\"country\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.write.parquet(path=\"resources/out/parquest_files/user\", mode=\"overwrite\", partitionBy=[\"country\", \"gender\"])"
    ]
   },
   {
@@ -1386,6 +1404,15 @@
    ],
    "source": [
     "df.select(df.item, df.country).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
    ]
   },
   {
