--- a/5-Transformations.ipynb
+++ b/5-Transformations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,10 +44,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x1b99f61d900>"
+       "<pyspark.sql.session.SparkSession at 0x2941b6d71f0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3263,6 +3263,314 @@
    "outputs": [],
    "source": [
     "spark_2.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UDF (User Defined Function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+------+----------+\n",
+      "| id| name|salary|department|\n",
+      "+---+-----+------+----------+\n",
+      "|  1| Paul| 32000|        HR|\n",
+      "|  2| Tina| 45000|        HR|\n",
+      "|  3| John| 28000|        IT|\n",
+      "|  4| Mike| 36000|        IT|\n",
+      "|  5|David| 34000|     Sales|\n",
+      "+---+-----+------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [(1, \"Paul\", 32000, \"HR\"), (2, \"Tina\", 45000, \"HR\"), (3, \"John\", 28000, \"IT\"), (4, \"Mike\", 36000, \"IT\"), (5, \"David\", 34000, \"Sales\")]\n",
+    "\n",
+    "df = spark.createDataFrame(data=data, schema=[\"id\", \"name\", \"salary\", \"department\"])\n",
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import udf,lit\n",
+    "from pyspark.sql.types import FloatType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function that acts as UDF\n",
+    "\"\"\"def increment_salary(salary, hike):\n",
+    "    return salary + (salary * hike)\n",
+    "\n",
+    "total_salary = udf(f=lambda salary,hike: increment_salary(salary, hike), returnType=FloatType())\"\"\"\n",
+    "\n",
+    "total_salary = udf(f=lambda salary,hike: salary + (salary * hike), returnType=FloatType())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+------+----------+------------+\n",
+      "| id| name|salary|department|total_salary|\n",
+      "+---+-----+------+----------+------------+\n",
+      "|  1| Paul| 32000|        HR|     44800.0|\n",
+      "|  2| Tina| 45000|        HR|     63000.0|\n",
+      "|  3| John| 28000|        IT|     39200.0|\n",
+      "|  4| Mike| 36000|        IT|     50400.0|\n",
+      "|  5|David| 34000|     Sales|     47600.0|\n",
+      "+---+-----+------+----------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.withColumn(\"total_salary\", total_salary(df.salary, lit(0.4))).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Annotation/Decorator @udf can be used to define the user defined function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@udf(returnType=FloatType())\n",
+    "def total_salary(salary: float, hike: float):\n",
+    "    return salary + (salary * hike)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+------+----------+------------+\n",
+      "| id| name|salary|department|total_salary|\n",
+      "+---+-----+------+----------+------------+\n",
+      "|  1| Paul| 32000|        HR|     44800.0|\n",
+      "|  2| Tina| 45000|        HR|     63000.0|\n",
+      "|  3| John| 28000|        IT|     39200.0|\n",
+      "|  4| Mike| 36000|        IT|     50400.0|\n",
+      "|  5|David| 34000|     Sales|     47600.0|\n",
+      "+---+-----+------+----------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.withColumn(\"total_salary\", total_salary(df.salary, lit(0.4))).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Register UDF as SQL Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(salary, hike)>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark.udf.register(name=\"TotalSalary\", f=lambda salary,hike: float(salary) + (float(salary) * float(hike)), returnType=FloatType())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.createOrReplaceTempView(\"employee\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------+\n",
+      "|TotalSalary(100, 0.4)|\n",
+      "+---------------------+\n",
+      "|                140.0|\n",
+      "+---------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"SELECT TotalSalary(100, 0.4);\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+------------+\n",
+      "| id| name|total_salary|\n",
+      "+---+-----+------------+\n",
+      "|  1| Paul|     44800.0|\n",
+      "|  2| Tina|     63000.0|\n",
+      "|  3| John|     39200.0|\n",
+      "|  4| Mike|     50400.0|\n",
+      "|  5|David|     47600.0|\n",
+      "+---+-----+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(f\"SELECT id, name, TotalSalary(salary,0.4) AS total_salary FROM employee;\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### flatMap()\n",
+    "- Applies transformation to each element of RDD (Similar to map()).\n",
+    "- Flattens the output i.e. convert nested list/tuple to single list. (2D list to 1D list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+------+----------+\n",
+      "| id| name|salary|department|\n",
+      "+---+-----+------+----------+\n",
+      "|  1| Paul| 32000|        HR|\n",
+      "|  2| Tina| 45000|        HR|\n",
+      "|  3| John| 28000|        IT|\n",
+      "|  4| Mike| 36000|        IT|\n",
+      "|  5|David| 34000|     Sales|\n",
+      "+---+-----+------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total elements: 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Paul'), (2, 'Tina'), (3, 'John'), (4, 'Mike'), (5, 'David')]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd = df.rdd.map(lambda emp: (emp[0], emp[1]))\n",
+    "print(f\"Total elements: {rdd.count()}\")\n",
+    "rdd.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total elements: 10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 'Paul', 2, 'Tina', 3, 'John', 4, 'Mike', 5, 'David']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd = df.rdd.flatMap(lambda emp: (emp[0], emp[1]))\n",
+    "print(f\"Total elements: {rdd.count()}\")\n",
+    "rdd.collect()"
    ]
   },
   {
